...
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        android:layout_marginTop="10dp"
        android:hint="Name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventNameEditText"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
            app:expandedHintEnabled="false"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:hint="# Attendees"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/attendeeLimitEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="8"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
...
