<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/light_grey"
    android:paddingHorizontal="10dp"
    android:descendantFocusability="blocksDescendants"
    android:paddingVertical="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/eventRowEventName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:text="Event Name" />
        <TextView
            android:id="@+id/eventRowEventDateTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="Date/Time" />
    </LinearLayout>
<!--    <Space-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:layout_height="match_parent" />-->
    <ImageButton
        android:layout_weight="0"
        android:id="@+id/qrCodeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_qr_code_24"
        android:background="@null"
        android:visibility="visible"
        android:layout_gravity="center"
        android:focusable="false"/>

</LinearLayout>